--- a/common/footer.html
+++ b/common/footer.html
@@ -57,6 +57,8 @@
                 <i class="fab fa-discord"></i>
                 <i class="fa-brands fa-github"></i>
                 |
+                <i class="fa-solid fa-user-ninja"></i>
+                |
                 <i class="fa-solid fa-envelope"></i>
               </p>
             </li>
