--- a/common/social-card.html
+++ b/common/social-card.html
@@ -47,6 +47,19 @@
         >
         <i class="fa-brands fa-github"></i> TNI Cybersec
         </button>
+        <hr />
+        <h4 class="tooltip-contact">
+          <i class="fa-solid fa-user-ninja"></i> CTF Organizers
+        </h4>
+        <a> <img rel="preload" as="image" width="auto" height="15" src="img/CTFTIME.png"></img> CTFtime</a>
+        <br />
+        <button
+          type="button"
+          onclick="window.open('https://github.com/TNI-Cybersec')"
+          class="btn btn-outline-dark btn-lg btn-block mb-2"
+        >
+        <i class="fa-solid fa-arrow-up-right-from-square"></i> TNI Cybersec
+        </button>
 
         <hr />
         <h4 class="tooltip-contact">
@@ -54,7 +67,6 @@
         </h4>
         <a> <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th </a>
         <br />
-
         <button
           type="button"
           onclick="location.href='mailto: pranisa@tni.ac.th'"
@@ -64,7 +76,6 @@
         </button>
         <a> <i class="fa-solid fa-envelope"> </i> tniinfo@tni.ac.th </a>
         <br />
-
         <button
           type="button"
           onclick="location.href='mailto: tniinfo@tni.ac.th'"
