--- a/common/social-card.html
+++ b/common/social-card.html
@@ -14,7 +14,7 @@
       </div>
       <div class="modal-body">
         <h4 class="tooltip-contact">
-          <i class="fa-solid fa-users-rectangle"></i> Our socials
+          <i class="fa-solid fa-users-rectangle"></i> Our Socials
         </h4>
         <button
           type="button"
@@ -55,7 +55,7 @@
         <br />
         <button
           type="button"
-          onclick="window.open('https://github.com/TNI-Cybersec')"
+          onclick="window.open('https://ctftime.org/team/182286')"
           class="btn btn-outline-dark btn-lg btn-block mb-2"
         >
         <i class="fa-solid fa-arrow-up-right-from-square"></i> TNI Cybersec
