--- a/aboutus.html
+++ b/aboutus.html
@@ -86,7 +86,6 @@
       <div class="container">
         <div class="hero-content">
           <br />
-
           <div class="row">
             <div class="col-lg-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.3s">
@@ -148,8 +147,8 @@
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-cogs"></i> 4.0.8
-                <span class="badge badge-warning">2022 BETA</span>
+                <i class="fas fa-cogs"></i> <span id="version"></span>
+                <span class="badge badge-warning"><span id="year"></span></span>
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
