--- a/termsofservice.html
+++ b/termsofservice.html
@@ -145,8 +145,8 @@
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-cogs"></i> 4.0.8
-                <span class="badge badge-warning">2022 BETA</span>
+                <i class="fas fa-cogs"></i> <span id="version"></span>
+                <span class="badge badge-warning"><span id="year"></span></span>
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
