--- a/termsofservice.html
+++ b/termsofservice.html
@@ -180,6 +180,7 @@
 
     <!-- javascript -->
     <script src="js/script.js"></script>
+    <script src="js/version.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
