--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,13 +1,13 @@
 <nav>
   <span
     id="brand"
-    class="circleScaleBtn2 logo"
+    class="circleScaleBtn2 logo wow fadeInDown"
     onclick="location.href='index.html'"
   >
     <img width="auto" height="55" src="img/TNICyberWeb.png" />
   </span>
 
-  <ul id="menu">
+  <ul id="menu" class="wow fadeInDown">
     <li>
       <a href="cybersec.html" class="borderFade"
         ><i class="fas fa-user-ninja"></i> Cybersec<span></span
@@ -35,7 +35,7 @@
   </ul>
 
   <div id="toggle">
-    <i class="fas fa-bars wow fadeInUp span" data-wow-delay="0.6s "></i>
+    <i class="fas fa-bars wow bounceIn span" data-wow-delay="0.6s "></i>
   </div>
 </nav>
 
