--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,13 +1,13 @@
 <nav>
   <span
     id="brand"
-    class="circleScaleBtn2 logo wow fadeInDown"
+    class="circleScaleBtn2 logo wow fadeInDown" data-wow-delay="0.6s"
     onclick="location.href='index.html'"
   >
     <img width="auto" height="55" src="img/TNICyberWeb.png" />
   </span>
 
-  <ul id="menu" class="wow fadeInDown">
+  <ul id="menu" class="wow fadeInDown" data-wow-delay="0.6s">
     <li>
       <a href="cybersec.html" class="borderFade"
         ><i class="fas fa-user-ninja"></i> Cybersec<span></span
@@ -35,13 +35,13 @@
   </ul>
 
   <div id="toggle">
-    <i class="fas fa-bars wow bounceIn span" data-wow-delay="0.6s "></i>
+    <i class="fas fa-bars wow bounceIn span" data-wow-delay="0.6s"></i>
   </div>
 </nav>
 
 <div id="resize">
   <div class="close-btn">
-    <i class="far fa-times-circle wow fadeInUp span" data-wow-delay="0.6s "></i>
+    <i class="far fa-times-circle wow bounceIn span" data-wow-delay="0.6s"></i>
   </div>
 
   <ul id="menu">
