--- a/aboutus.html
+++ b/aboutus.html
@@ -148,8 +148,18 @@
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-cogs"></i> <span id="version"></span>
-                <span class="badge badge-warning"><span id="year"></span></span>
+                <span class="badge badge-warning"><span id="year"></span></span> 
               </p>
+              <button
+                type="button"
+                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
+                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.6s"
+              >
+              <i class="fa-brands fa-hotjar"></i> New Feature!
+              </button>
+              <br />
+          
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
                 <span class="badge badge-warning"
@@ -157,10 +167,11 @@
                 >
                 ที่ <i class="fas fa-arrow-circle-down"></i>
               </p>
+
               <button
                 type="button"
                 onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/issues')"
-                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
                 <i class="fab fa-github"></i> TNI Cybersec
