--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="img/CyberPic.jpg" />
     <meta
       property="og:description"
-      content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก"
+      content="We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
     />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
@@ -20,7 +20,7 @@
     <meta name="twitter:image" content="img/CyberPic.jpg" />
     <meta
       name="twitter:description"
-      content="เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก"
+      content="We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
     />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
