--- a/aboutus.html
+++ b/aboutus.html
@@ -95,8 +95,11 @@
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
               </h2>
+              <h5 class="wow fadeInUp" data-wow-delay="0.5s">
+                "We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
+              </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                เป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
+                เราเป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
                 Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
               </p>
               <img
@@ -146,10 +149,10 @@
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
+              <h5 class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-cogs"></i> <span id="version"></span>
                 <span class="badge badge-warning"><span id="year"></span></span> 
-              </p>
+              </h5>
               <button
                 type="button"
                 onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
