--- a/termsofservice.html
+++ b/termsofservice.html
@@ -146,10 +146,10 @@
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
+              <h5 class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-cogs"></i> <span id="version"></span>
                 <span class="badge badge-warning"><span id="year"></span></span> 
-              </p>
+              </h5>
               <button
                 type="button"
                 onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
