--- a/activities.html
+++ b/activities.html
@@ -18,7 +18,7 @@
     <meta http-equiv="refresh" content="500" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/CyberPic.jpg" />
+    <meta property="og:image" content="img/TNICyberWebIcon.png" />
     <meta property="og:description" content="Activities" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
