--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="TNI Cybersec" content="Home" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/CyberPic.jpg" />
+    <meta property="og:image" content="img/TNICyberWebIcon.png" />
     <meta
       property="og:description"
       content="We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
