--- a/termsofservice.html
+++ b/termsofservice.html
@@ -8,7 +8,7 @@
     <meta name="TNI Cybersec" content="Terms of service" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/CyberPic.jpg" />
+    <meta property="og:image" content="img/TNICyberWebIcon.png" />
     <meta property="og:description" content="Terms of service" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
