--- a/activities.html
+++ b/activities.html
@@ -18,13 +18,13 @@
     <meta http-equiv="refresh" content="500" />
 
     <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="img/TNICyberWebIcon.png" />
+    <meta property="og:image" content="/img/CyberPic.jpg" />
     <meta property="og:description" content="Activities" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="img/CyberPic.jpg" />
+    <meta name="twitter:image" content="/img/CyberPic.jpg" />
     <meta name="twitter:description" content="Activities" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
