--- a/aboutus.html
+++ b/aboutus.html
@@ -102,15 +102,14 @@
                 เราเป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
                 Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
               </p>
-              <img
-                rel="preload"
-                as="image"
-                class="wow fadeInUp center border border-light round"
-                data-wow-delay="0.6s"
-                src="img/CyberPic_coop.png"
-                alt="Owner"
-                style="width: 100%; height: auto"
-              />
+              <div class="containers wow fadeInUp border border-light" data-wow-delay="0.4s" id="containers">
+                <div class="carousel" id="carousel">
+                            <img rel="preload" as="image" src="img/CyberPic_coop.png" alt="1" class="img">
+                            <img rel="preload" as="image" src="img/Cisco-Innovation-Challenge-2019.jpg" alt="2" class="img">
+                            <img rel="preload" as="image" src="img/finsec.jpg" alt="3" class="img">
+                            <img rel="preload" as="image" src="img/tni.jpg" alt="4" class="img"> 
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -197,6 +196,7 @@
     <!-- javascript -->
     <script src="js/script.js"></script>
     <script src="js/version.js"></script>
+    <script src="js/carousel.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
