--- a/activities.html
+++ b/activities.html
@@ -256,7 +256,7 @@
                   <span class="badge badge-light"
                     ><i class="fas fa-handshake"></i> Join us!</span
                   >
-                  ได้ที่ปุ่มด้านล่างนี้ได้เลย
+                  ได้ที่ปุ่มด้านล่างนี้ได้เลยโดยเลือกช่องทางที่คุณสะดวกได้เลย
                   <i class="fas fa-arrow-circle-down"></i>
                 </p>
               </div>
@@ -358,7 +358,7 @@
                       ><i class="fas fa-user-check"></i>
                       ลงชื่อเข้าร่วมกิจกรรม</span
                     >
-                    ได้ที่ปุ่มด้านบนนี้ได้เลย
+                    ได้ที่ปุ่มด้านบนนี้ได้เลยโดยเลือกช่องทางที่คุณสะดวกได้เลย
                   </p>
                   <p>
                     <span class="badge badge-warning"
