--- a/activities.html
+++ b/activities.html
@@ -327,7 +327,7 @@
                     <span class="badge badge-warning">'ฝึกหรืออบรม'</span>
                     กำลังฝึกหรืออบรม(สามารถเข้าร่วมได้อยู่)
                     <span class="badge badge-danger">'ผ่านไปแล้ว'</span>
-                    กิจกรรมผ่านไปแล้ว
+                    กิจกรรมผ่านไปแล้วหรือส่งชื่อไปแล้ว
                     <span class="badge badge-danger">'ยกเลิก'</span>
                     ยกเลิกกิจกรรม
                   </p>
