--- a/cybersec.html
+++ b/cybersec.html
@@ -162,6 +162,36 @@
         <div class="hero-content">
           <div class="row">
             <div class="col-lg-12">
+              
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                👨‍💻 Writeups</h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">👨‍💻 CTF Writeups</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/Writeups.png"
+                alt="Writeups"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                Writeups ของงาน Cyber Security CTF ต่าง ๆ ที่น่าสนใจ
+              </p>
+              <button
+                type="button"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md')"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
+              <br />
+              
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 🧛‍♂️ Vulnerability
               </h2>
@@ -183,35 +213,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md')"
-                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
-                data-wow-delay="0.5s"
-              >
-                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
-                more!
-              </button>
-              <br />
-
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">👨‍💻 Writeups</h2>
-              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                <span class="badge badge-light">👨‍💻 CTF Writeups</span>
-              </h4>
-              <img
-                rel="preload"
-                as="image"
-                class="wow fadeInUp center border border-light round"
-                data-wow-delay="0.5s"
-                src="img/Writeups.png"
-                alt="Writeups"
-                style="width: 100%; height: auto"
-              />
-              <br />
-              <p class="wow fadeInUp" data-wow-delay="0.5s">
-                Writeups ของงาน Cyber Security CTF ต่าง ๆ ที่น่าสนใจ
-              </p>
-              <button
-                type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md')"
+                onclick="window.open('https://tni-cybersec.github.io/writeups/')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
