--- a/cybersec.html
+++ b/cybersec.html
@@ -183,7 +183,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md')"
+                onclick="window.open('https://tni-cybersec.github.io/writeups)"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
@@ -213,7 +213,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://tni-cybersec.github.io/writeups/')"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
