--- a/cybersec.html
+++ b/cybersec.html
@@ -183,7 +183,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://tni-cybersec.github.io/writeups)"
+                onclick="window.open('https://tni-cybersec.github.io/writeups')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
