Add chart animation

--- a/activities.html
+++ b/activities.html
@@ -102,8 +102,7 @@
                 <i class="fas fa-fire-alt"></i> Activities
               </h1>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                ท่านจะหา Activity และดูสถานะ Activity
-                ของเราได้ที่นี่
+                ท่านจะหา Activity และดูสถานะ Activity ของเราได้ที่นี่
               </p>
               <!-- <img class="wow fadeInUp center border border-light round" data-wow-delay="0.6s" src="OrderChecking.jpg" alt="IO Database" style="width: 100%; height: auto"> -->
             </div>
@@ -378,7 +377,7 @@
 
           <!-- greensock cdn -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
           <script src="https://d3js.org/d3.v6.min.js"></script>
           <script type="text/javascript">
             $(function () {
@@ -545,7 +544,8 @@
                   aspectRatio: 1.5,
 
                   animation: {
-                    duration: 0,
+                    duration: 2000,
+                    easing: "easeInOutQuart",
                   },
 
                   legend: {
