--- a/aboutus.html
+++ b/aboutus.html
@@ -96,7 +96,7 @@
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
-                "We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
+                "We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
