--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     />
     <link rel="icon" href="img/CyberPic.jpg" />
     <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+    <link rel="manifest" href="common/manifest.json" />
 
     <!-- for on scroll animations -->
     <link rel="stylesheet" href="css/animate.min.css" />
@@ -191,6 +192,7 @@
 
     <!-- javascript -->
     <script src="js/script.js"></script>
+    <script src="js/app.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
