--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
+
+    <!-- favicon -->
     <link rel="icon" href="img/CyberPic.jpg" />
     <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
     <link rel="manifest" href="common/manifest.json" />
@@ -73,6 +75,9 @@
     <!-- for on scroll animations -->
     <link rel="stylesheet" href="css/animate.min.css" />
     <script src="js/wow.min.js"></script>
+
+    <!-- CountAPI -->
+    <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"></script>
   </head>
 
   <body>
