--- a/cybersec.html
+++ b/cybersec.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en,th">
+<html lang="th">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
