Add meta description

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <meta name="TNI Cybersec" content="404" />
 
     <title>TNI Cybersec | 404 Page not found</title>
+    <meta name="description" content="404 Page not found" />
 
     <!-- stylesheet -->
     <!-- stylesheet -->
