--- a/aboutus.html
+++ b/aboutus.html
@@ -19,6 +19,7 @@
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec | About Us</title>
+    <meta name="description" content="About Us" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -96,18 +97,47 @@
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
-                "We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
+                "We study & cyber research to watch out for new threats and
+                expand on new knowledge in the cybersec."
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
                 Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
               </p>
-              <div class="containers wow fadeInUp border border-light" data-wow-delay="0.4s" id="containers">
+              <div
+                class="containers wow fadeInUp border border-light"
+                data-wow-delay="0.4s"
+                id="containers"
+              >
                 <div class="carousel" id="carousel">
-                            <img rel="preload" as="image" src="img/CyberPic_coop.png" alt="1" class="img">
-                            <img rel="preload" as="image" src="img/Cisco-Innovation-Challenge-2019.jpg" alt="2" class="img">
-                            <img rel="preload" as="image" src="img/finsec.jpg" alt="3" class="img">
-                            <img rel="preload" as="image" src="img/tni.jpg" alt="4" class="img"> 
+                  <img
+                    rel="preload"
+                    as="image"
+                    src="img/CyberPic_coop.png"
+                    alt="1"
+                    class="img"
+                  />
+                  <img
+                    rel="preload"
+                    as="image"
+                    src="img/Cisco-Innovation-Challenge-2019.jpg"
+                    alt="2"
+                    class="img"
+                  />
+                  <img
+                    rel="preload"
+                    as="image"
+                    src="img/finsec.jpg"
+                    alt="3"
+                    class="img"
+                  />
+                  <img
+                    rel="preload"
+                    as="image"
+                    src="img/tni.jpg"
+                    alt="4"
+                    class="img"
+                  />
                 </div>
               </div>
             </div>
@@ -150,7 +180,7 @@
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-cogs"></i> <span id="version"></span>
-                <span class="badge badge-warning"><span id="year"></span></span> 
+                <span class="badge badge-warning"><span id="year"></span></span>
               </h5>
               <button
                 type="button"
@@ -158,10 +188,10 @@
                 class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.6s"
               >
-              <i class="fa-brands fa-hotjar"></i> New Feature!
+                <i class="fa-brands fa-hotjar"></i> New Feature!
               </button>
               <br />
-          
+
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
                 <span class="badge badge-warning"
