--- a/activities.html
+++ b/activities.html
@@ -29,6 +29,7 @@
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec | Activities</title>
+    <meta name="description" content="Activities" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
