--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="/img/CyberPic.jpg" />
     <meta
       property="og:description"
-      content="We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
+      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
     />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
@@ -20,11 +20,15 @@
     <meta name="twitter:image" content="/img/CyberPic.jpg" />
     <meta
       name="twitter:description"
-      content="We study & cyber research for watch out for new threats and expand on new knowledge in the cybersec."
+      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
     />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec | Home</title>
+    <meta
+      name="description"
+      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
+    />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -77,7 +81,10 @@
     <script src="js/wow.min.js"></script>
 
     <!-- CountAPI -->
-    <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"></script>
+    <script
+      async
+      src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"
+    ></script>
   </head>
 
   <body>
