--- a/cybersec.html
+++ b/cybersec.html
@@ -19,6 +19,7 @@
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec | Cybersec</title>
+    <meta name="description" content="Cybersec" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
