--- a/termsofservice.html
+++ b/termsofservice.html
@@ -19,6 +19,7 @@
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
     <title>TNI Cybersec | Terms of Service</title>
+    <meta name="description" content="Terms of service" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
