--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,10 +1,16 @@
 <nav>
   <span
     id="brand"
-    class="circleScaleBtn2 logo wow fadeInDown" data-wow-delay="0.6s"
+    class="circleScaleBtn2 logo wow fadeInDown"
+    data-wow-delay="0.6s"
     onclick="location.href='index.html'"
   >
-    <img width="auto" height="55" src="img/TNICyberWeb.png" />
+    <img
+      width="auto"
+      height="55"
+      src="img/TNICyberWeb.png"
+      alt="TNI Cybersec"
+    />
   </span>
 
   <ul id="menu" class="wow fadeInDown" data-wow-delay="0.6s">
