--- a/404.html
+++ b/404.html
@@ -11,7 +11,6 @@
     <meta name="description" content="404 Page not found" />
 
     <!-- stylesheet -->
-    <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- bootstrap cdns -->
@@ -37,10 +36,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
     />
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
 
     <!-- google fonts -->
     <link
@@ -51,6 +46,8 @@
       href="https://fonts.googleapis.com/css?family=Mitr:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
+
+    <!-- favicon -->
     <link rel="icon" href="img/CyberPic.jpg" />
     <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
 
