--- a/activities.html
+++ b/activities.html
@@ -57,10 +57,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
     />
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
 
     <!-- google fonts -->
     <link
@@ -71,6 +67,8 @@
       href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
+
+    <!-- favicon -->
     <link rel="icon" href="img/CyberPic.jpg" />
     <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
 
