Fix: social modal overflow

--- a/activities.html
+++ b/activities.html
@@ -329,9 +329,7 @@
                 <div class="modal-footer">
                   <button
                     type="button"
-                    data-toggle="modal"
-                    data-dismiss="modal"
-                    data-target="#social"
+                    onclick="$('#ioTable').modal('hide');$('#social').modal();$('#social').css('overflow-y','auto')"
                     class="btn btn-outline-dark btn-block btn-lg"
                   >
                     <i class="fas fa-user-check"></i> ลงชื่อเข้าร่วมกิจกรรม
@@ -379,7 +377,7 @@
 
           <!-- greensock cdn -->
           <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
-          
+
           <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
           <script src="https://d3js.org/d3.v6.min.js"></script>
           <script type="text/javascript">
