--- a/cybersec.html
+++ b/cybersec.html
@@ -140,7 +140,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://ict.dmh.go.th/events/events/files/CyberSecurity-Awareness.pdf')"
+                onclick="window.open('https://youtube.com/playlist?list=PL590L5WQmH8dsxxz7ooJAgmijwOz0lh2H')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
