--- a/cybersec.html
+++ b/cybersec.html
@@ -179,7 +179,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://tni-cybersec.github.io/writeups')"
+                onclick="location.href='https://tni-cybersec.github.io/writeups'"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
@@ -239,7 +239,7 @@
               </p>
               <button
                 type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md')"
+                onclick="location.href='https://tni-cybersec.github.io/tools'"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
