--- a/common/footer.html
+++ b/common/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer user-select-none">
   <div class="container">
     <div class="collab">
       <div class="row">
@@ -26,6 +26,13 @@
               width="auto"
               height="55"
               src="img/TNICyberWeb.png"
+            />
+            <img
+              rel="preload"
+              as="image"
+              width="auto"
+              height="55"
+              src="img/TNIIcon.png"
             />
           </h5>
           <p
