--- a/common/social-card.html
+++ b/common/social-card.html
@@ -8,12 +8,12 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content ripple1">
       <div class="modal-header">
-        <h4 class="modal-title rainbowText">
+        <h4 class="modal-title rainbowText user-select-none">
           <i class="fas fa-handshake"></i> Join us!
         </h4>
       </div>
       <div class="modal-body">
-        <h4 class="tooltip-contact">
+        <h4 class="tooltip-contact user-select-none">
           <i class="fa-solid fa-users-rectangle"></i> Our Socials
         </h5>
         <button
@@ -46,7 +46,7 @@
         </button>
         <hr />
 
-        <h4 class="tooltip-contact">
+        <h4 class="tooltip-contact user-select-none">
           <i class="fa-solid fa-user-ninja"></i> CTF Organizers
         </h4>
         <a> <img rel="preload" as="image" width="auto" height="15" src="img/CTFTIME.png"></img> CTFtime</a>
@@ -60,7 +60,7 @@
         </button>
 
         <hr />
-        <h4 class="tooltip-contact">
+        <h4 class="tooltip-contact user-select-none">
           <i class="fa-solid fa-envelope"></i> Email
         </h4>
         <a> <i class="fa-solid fa-envelope"> </i> pranisa@tni.ac.th </a>
