--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
         <div class="hero">
           <div class="header">
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">👋Hello World!👋</h1>
-            <h5 class="wow fadeInUp" data-wow-delay="0.3s">
+            <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">👋Hello World!👋</h1>
+            <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.3s">
               👋こんにちは世界!👋
             </h5>
           </div>
@@ -104,7 +104,7 @@
     <div class="container-fluid">
       <br />
 
-      <h6 class="wow fadeInUp" data-wow-delay="0.2s">
+      <h6 class="wow fadeInUp user-select-none" data-wow-delay="0.2s">
         <i class="fas fa-user-ninja"></i> わたしはだれ？
       </h6>
 
@@ -125,7 +125,7 @@
           >
             <div class="hero">
               <div class="centered">
-                <h1 class="wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-user-ninja"></i> Cybersec
                 </h1>
               </div>
@@ -147,7 +147,7 @@
           >
             <div class="hero">
               <div class="centered">
-                <h1 class="wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-fire-alt"></i> Activities
                 </h1>
               </div>
@@ -169,7 +169,7 @@
           >
             <div class="hero">
               <div class="centered">
-                <h1 class="wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-info-circle"></i> About Us
                 </h1>
               </div>
