--- a/aboutus.html
+++ b/aboutus.html
@@ -72,7 +72,7 @@
       <div class="whitespace"></div>
 
       <!--------------- hero section starts here --------------->
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
           <div class="row">
@@ -82,51 +82,98 @@
               </h1>
               <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-user-ninja"></i> TNI Cybersec
+                  <img
+                    rel="preload"
+                    as="image"
+                    width="auto"
+                    height="40"
+                    src="img/TNICyberICON.png"
+                  />
+                 TNI Cybersec
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
                 "We study & cyber research to watch out for new threats and
                 expand on new knowledge in the cybersec."
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                เราเป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
-                Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
+                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆเพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่นและเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
               </p>
+
               <div
-                class="containers wow fadeInUp border border-light"
-                data-wow-delay="0.4s"
-                id="containers"
+              class="containers wow fadeInUp border border-light"
+              data-wow-delay="0.4s"
+              id="containers"
               >
-                <div class="carousel" id="carousel">
-                  <img
-                    rel="preload"
-                    as="image"
-                    src="img/CyberPic_coop.png"
-                    alt="1"
-                    class="img"
-                  />
-                  <img
-                    rel="preload"
-                    as="image"
-                    src="img/Cisco-Innovation-Challenge-2019.jpg"
-                    alt="2"
-                    class="img"
-                  />
-                  <img
-                    rel="preload"
-                    as="image"
-                    src="img/finsec.jpg"
-                    alt="3"
-                    class="img"
-                  />
-                  <img
-                    rel="preload"
-                    as="image"
-                    src="img/tni.jpg"
-                    alt="4"
-                    class="img"
-                  />
+              <div class="carousel" id="carousel">
+                <img
+                  rel="preload"
+                  as="image"
+                  src="img/CyberPic_coop.png"
+                  alt="1"
+                  class="img"
+                />
+                <img
+                  rel="preload"
+                  as="image"
+                  src="img/Cisco-Innovation-Challenge-2019.jpg"
+                  alt="2"
+                  class="img"
+                />
+                <img
+                  rel="preload"
+                  as="image"
+                  src="img/finsec.jpg"
+                  alt="3"
+                  class="img"
+                />
+                <img
+                  rel="preload"
+                  as="image"
+                  src="img/tni.jpg"
+                  alt="4"
+                  class="img"
+                />
+              </div>
+            </div>
+              <br>
+              <br>
+              <h5 class="wow fadeInUp" data-wow-delay="0.4s">
+                <img
+                  rel="preload"
+                  as="image"
+                  width="auto"
+                  height="55"
+                  src="img/logoTNIWhite.png"
+                />
+              </h5>
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                เราเป็นชมรมทางด้าน Cyber Security & Technology ซึ่งครอบคลุมทั้งในหลายด้านเช่น ความมั่นคงทางไซเบอร์, ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี ที่ร่วมมือกันหลายองค์กรโดย
+                Thai-Nichi Institute of Technology (TNI, 泰日工業大学) เป็นแกนนำหลัก
+              </p>
+              <br>
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                <i class="fa-solid fa-handshake-angle"></i> Cooperative
+              </h2>
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                บริษัทหน่วยงานองค์กรที่สมาชิกชมรมได้ไปทำปฏิบัติสหกิจศึกษาและฝึกงานได้นำความรู้ไปปรับใช้ประยุกต์ใช้กับงานจริง
+              </p>
+              <div id="carouselcop" class="carousel slide wow fadeInUp" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/Coop Cop.png" class="d-block w-100" alt="KPMG NECTEC">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/Coop Cop2.png" class="d-block w-100" alt="IBM SOSECURE">
+                  </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-target="#carouselcop" data-slide="prev">
+                  <span class="fa-solid fa-backward" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-target="#carouselcop" data-slide="next">
+                  <span class="fa-solid fa-forward" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </button>
               </div>
             </div>
           </div>
@@ -137,13 +184,13 @@
 
       <!--------------- content info section starts here --------------->
 
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
           <div class="row">
             <div class="col-lg-12">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fa-solid fa-handshake-angle"></i> ติดต่อกับเรา
+               <i class="fa-solid fa-comments"></i> ติดต่อกับเรา
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 อยากร่วมงานกับเราหรือติดต่อสอบถามท่านสามารถติดต่อกับเราได้โดยตรงทางด้านล่างนี้
