--- a/activities.html
+++ b/activities.html
@@ -82,7 +82,7 @@
       <div class="whitespace"></div>
 
       <!--------------- hero section starts here --------------->
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
           <div class="row">
@@ -102,17 +102,17 @@
 
       <!--------------- content info section starts here --------------->
 
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <div class="row">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.5s">
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+              <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                 <i class="fas fa-clipboard-list"></i> Activity List
               </h2>
-              <p class="wow fadeInUp" data-wow-delay="0.5s">
+              <p class="wow fadeInUp user-select-none" data-wow-delay="0.5s">
                 <span class="badge badge-light">ท่านสามารถ</span> ดู Activity
                 ของเราได้ที่นี่ <i class="fas fa-arrow-circle-down"></i>
-              </p>
+              </p>  
 
               <div class="wow fadeInUp" data-wow-delay="0.5s">
                 <button
@@ -131,7 +131,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
           <div class="row">
@@ -225,7 +225,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
           <div class="row">
@@ -332,18 +332,17 @@
                     onclick="$('#ioTable').modal('hide');$('#social').modal();$('#social').css('overflow-y','auto')"
                     class="btn btn-outline-dark btn-block btn-lg"
                   >
-                    <i class="fas fa-user-check"></i> ลงชื่อเข้าร่วมกิจกรรม
+                  <i class="fas fa-handshake"></i> Join us!
                   </button>
                   <p>
                     <i class="fas fa-arrow-circle-up"></i> ถ้าคุณ
                     <span class="badge badge-warning"
-                      >! ต้องการเข้าร่วมกิจกรรม !</span
+                      >! ต้องการข้าร่วมชมรม !</span
                     >
-                    ท่านสามารถ
+                    ท่านสามารถกด
                     <span class="badge badge-success"
-                      ><i class="fas fa-user-check"></i>
-                      ลงชื่อเข้าร่วมกิจกรรม</span
-                    >
+                      ><i class="fas fa-handshake"></i> Join us!
+                    </span>
                     ได้ที่ปุ่มด้านบนนี้ได้เลยโดยเลือกช่องทางที่คุณสะดวกได้เลย
                   </p>
                   <p>
