--- a/common/cookie-banner.html
+++ b/common/cookie-banner.html
@@ -1,4 +1,4 @@
-<div class="cookie-container">
+<div class="cookie-container user-select-none">
   <br />
   <h3><i class="fas fa-cookie-bite"></i> We use cookies.</h3>
   <p>
