--- a/cybersec.html
+++ b/cybersec.html
@@ -93,7 +93,7 @@
               <div class= "collapse fadeInUp border border-warning round" data-wow-delay="0.3s" id="QuickAction">
               <div class="container col-lg-11">
                 
-              <br />
+              <br>
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">🤷‍♂️ For Beginner</h3>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-light">🤷‍♂️ Beginner</span>
@@ -119,7 +119,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">🛠 Awesome tools</h3>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-light">🛠 Tools</span>
@@ -136,7 +136,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">👨‍💻 Writeups</h3>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-light">👨‍💻 CTF Writeups</span>
@@ -153,7 +153,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">💡 Know-how</h3>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-light">👨‍🏫 Knowledge</span>
@@ -170,13 +170,13 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
               </div>
             </div>
 
 
             
-              <br />
+              <br>
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fa-solid fa-question"></i> Cybersec ในนิยามของเราคืออะไร
               </h2>
@@ -192,7 +192,7 @@
                 alt="Vulnerability"
                 style="width: 100%; height: auto"
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 Cybersec ในคำนิยามของเราหมายถึงหลายอย่างๆที่เกี่ยวกับทั้งทางด้าน Cyber Security & Technology ซึ่งครอบคลุมทั้งในหลายด้านเช่น ความมั่นคงทางไซเบอร์, ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยีและกระบวนการที่รวมถึงวิธีการปฏิบัติที่ถูกออกแบบไว้เพื่อป้องกันและรับมือที่อาจมีช่องโหว่หรือมีการป้องกันที่อ่อนแออาจจะถูกโจมตีเข้ามาในเครือข่ายโครงสร้างพื้นฐานทางสารสนเทศหรือระบบโปรแกรมที่อาจจะเกิดความเสียหายจากการที่ถูกเข้าถึงจากบุคคลที่สามโดยไม่ได้รับอนุญาต โดยเราจะแบ่งเป็นหัวข้อหลักๆตามหลักการดังนี้
               </p>
@@ -236,7 +236,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
                 style="width: 100%; height: auto"
                 onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md')"
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 ช่องโหว่ทาง Cyber & Technology ในด้านต่าง ๆ ที่น่าสนใจ
               </p>
@@ -279,7 +279,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
 
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">👨‍💻 Writeups</h2>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
@@ -296,7 +296,7 @@
                 style="width: 100%; height: auto"
                 onclick="window.open('https://tni-cybersec.github.io/writeups')"
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 Writeups ของงาน Cyber Security CTF ต่าง ๆ ที่น่าสนใจ
               </p>
@@ -309,7 +309,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
 
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 🛠 Awesome tools
@@ -320,13 +320,15 @@
               <img
                 rel="preload"
                 as="image"
+                type="button"
                 class="wow fadeInUp center border border-light round"
                 data-wow-delay="0.5s"
                 src="img/Awesome tools.png"
                 alt="Awesome tools"
                 style="width: 100%; height: auto"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md')"
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 Tool ที่ใช้ในด้าน Cyber & Technology เจ๋ง ๆ ที่เราแนะนำ
               </p>
@@ -339,7 +341,7 @@
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
                 more!
               </button>
-              <br />
+              <br>
 
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 🤷‍♂️ For Beginner
@@ -350,13 +352,16 @@
               <img
                 rel="preload"
                 as="image"
+                type="button"
                 class="wow fadeInUp center border border-light round"
                 data-wow-delay="0.5s"
                 src="img/For Beginner.png"
                 alt="For Beginner"
                 style="width: 100%; height: auto"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/forbeginner.md')"
+
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 จุดเริ่มต้นในสาย Cyber & Technology ที่เราแนะนำ
               </p>
@@ -370,7 +375,7 @@
                 more!
               </button>
 
-              <br />
+              <br>
 
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">💡 Know-how</h2>
               <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
@@ -379,13 +384,15 @@
               <img
                 rel="preload"
                 as="image"
+                type="button"
                 class="wow fadeInUp center border border-light round"
                 data-wow-delay="0.5s"
                 src="img/Know-how.png"
                 alt="For Beginner"
                 style="width: 100%; height: auto"
+                onclick="window.open('https://github.com/TNI-Cybersec/.github/blob/main/profile/knowhow.md')"
               />
-              <br />
+              <br>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 ความรู้ด้าน Cyber & Technology ที่เราแนะนำ
               </p>
