--- a/aboutus.html
+++ b/aboutus.html
@@ -74,14 +74,14 @@
       <!--------------- hero section starts here --------------->
       <div class="container user-select-none">
         <div class="hero-content">
-          <br />
+          <br>
           <div class="row">
             <div class="col-lg-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.3s">
                 <i class="fas fa-info-circle"></i> About Us
               </h1>
-              <br />
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+              <br>
+              <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                   <img
                     rel="preload"
                     as="image"
@@ -137,7 +137,7 @@
             </div>
               <br>
               <br>
-              <h5 class="wow fadeInUp" data-wow-delay="0.4s">
+              <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                 <img
                   rel="preload"
                   as="image"
@@ -157,7 +157,7 @@
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 บริษัทหน่วยงานองค์กรที่สมาชิกชมรมได้ไปทำปฏิบัติสหกิจศึกษาและฝึกงานได้นำความรู้ไปปรับใช้ประยุกต์ใช้กับงานจริง
               </p>
-              <div id="carouselcop" class="carousel slide wow fadeInUp" data-ride="carousel">
+              <div id="carouselcop" class="carousel slide wow fadeInUp user-select-none" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="img/Coop Cop.png" class="d-block w-100" alt="KPMG NECTEC">
@@ -186,7 +186,7 @@
 
       <div class="container user-select-none">
         <div class="hero-content">
-          <br />
+          <br>
           <div class="row">
             <div class="col-lg-12">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
@@ -205,11 +205,11 @@
               >
                 <i class="fas fa-handshake"></i> Join us!
               </button>
-              <br />
+              <br>
             </div>
 
             <div class="col-lg-12">
-              <br />
+              <br>
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
@@ -225,7 +225,7 @@
               >
                 <i class="fa-brands fa-hotjar"></i> New Feature!
               </button>
-              <br />
+              <br>
 
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
@@ -243,7 +243,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br />
+              <br>
             </div>
           </div>
         </div>
