--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
           <div
             rel="preload"
             as="image"
+            type="button"
             class="col-lg-12 type type1 border border-light wow fadeInUp circleScaleBtn"
             data-wow-delay="0.2s"
             onclick="location.href='cybersec.html'"
@@ -141,6 +142,7 @@
           <div
             rel="preload"
             as="image"
+            type="button"
             class="col-lg-12 type type2 border border-light wow fadeInUp circleScaleBtn"
             data-wow-delay="0.2s"
             onclick="location.href='activities.html'"
@@ -163,6 +165,7 @@
           <div
             rel="preload"
             as="image"
+            type="button"
             class="col-lg-12 type type3 border border-light wow fadeInUp circleScaleBtn"
             data-wow-delay="0.2s"
             onclick="location.href='aboutus.html'"
