Fix add fa-solid fa-bolt

--- a/cybersec.html
+++ b/cybersec.html
@@ -86,9 +86,9 @@
 
               <h1 class="wow fadeInUp" data-wow-delay="0.3s">
                 <p class="wow fadeInUp user-select-none" data-wow-delay="0.5s">
-                 ถ้าไม่รู้ว่าจะเริ่มที่ตรงไหนก่อนกด <span class="badge badge-warning">⚡ Quick Action!</span> เพื่อเข้าถึงเนื้อหาอย่างรวดเร็วได้ง่ายๆ <i class="fas fa-arrow-circle-down"></i>
+                 ถ้าไม่รู้ว่าจะเริ่มที่ตรงไหนก่อนกด <span class="badge badge-warning"><i class="fa-solid fa-bolt"></i> Quick Action!</span> เพื่อเข้าถึงเนื้อหาอย่างรวดเร็วได้ง่ายๆ <i class="fas fa-arrow-circle-down"></i>
                 </p>
-                <button class="btn btn-warning btn-block btn-lg wow fadeInUp" data-toggle="collapse" href="#QuickAction" aria-expanded="false" aria-controls="collapseExample">⚡ Quick Action!</button>
+                <button class="btn btn-warning btn-block btn-lg wow fadeInUp" data-toggle="collapse" href="#QuickAction" aria-expanded="false" aria-controls="collapseExample"><i class="fa-solid fa-bolt"></i> Quick Action!</button>
               </h1>
               <div class= "collapse fadeInUp border border-warning round" data-wow-delay="0.3s" id="QuickAction">
               <div class="container col-lg-11">
